# pinger

./: .env.example  .gitignore  README.md  about.hbs  about.toml  deny.toml  docker-compose.yaml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  build.yaml  ci.yaml
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: Pinger.kt
android/app/src/main/java/dev/janm/pinger/: MainActivity.kt  MessageFromServer.kt  MessageToServer.kt  Pinger.kt
android/app/src/main/res/drawable/: accept.xml  bottom_background.xml  circle.xml  floating_background.xml  icon.xml  logo_adaptive_background.xml  logo_adaptive_monochrome.xml  logo_inverse.xml  ping_accepted.xml  ping_incoming.xml  ping_marker.xml  ping_rejected.xml  reject.xml  slideup_background.xml
android/app/src/main/res/drawable-v26/: icon.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  style.xml  themes.xml
android/app/src/main/res/values-w480dp/: style.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/app/src/main/rust/: CMakeLists.txt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .dockerignore  Cargo.toml  Dockerfile  bug.html  build.rs
backend/assets/: bug.html  index.html  pinger.webmanifest
backend/src/: main.rs  serde_support.rs  tests.rs
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/java_ffi/: KeyExchange.java  PingInfo.java  mod.rs
