[package]
name = "pinger-backend"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
axum = { version = "0.7.9", default-features = false, features = [
	"http1",
	"http2",
	"tokio",
	"tower-log",
	"tracing",
	"macros",
	"ws",
] }
base64 = "0.22.1"
pinger = { version = "*", path = "../lib" }
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
	"env-filter",
	"tracing-log",
] }

[dev-dependencies]
regex = "1.11.1"

[build-dependencies]
minify-html = "0.15.0"
