[package]
name = "pinger-backend"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
axum = { version = "0.8.4", default-features = false, features = [
	"http1",
	"http2",
	"tokio",
	"tower-log",
	"tracing",
	"macros",
	"ws",
] }
base64 = "0.22.1"
pinger = { version = "*", path = "../lib" }
rand = "0.9.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.11"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
	"env-filter",
	"tracing-log",
] }

[dev-dependencies]
regex = "1.11.1"

[build-dependencies]
minify-html = "0.16.4"

[lints]
rust.unsafe_code = "forbid"
clippy.pedantic = { level = "warn", priority = -1 }
clippy.cargo = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }
rust.missing_docs = "warn"
rustdoc.missing_crate_level_docs = "warn"
clippy.multiple_crate_versions = "allow"
clippy.tabs_in_doc_comments = "allow"
clippy.module_name_repetitions = "allow"
