[package]
name = "pinger-backend"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
axum = { version = "0.8.5", default-features = false, features = [
	"http1",
	"http2",
	"tokio",
	"tower-log",
	"tracing",
	"macros",
	"ws",
] }
base64 = "0.22.1"
pinger = { version = "*", path = "../lib" }
rand = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
	"env-filter",
	"tracing-log",
] }

[dev-dependencies]
regex = "1.11.3"

[build-dependencies]
minify-html = "0.16.4"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
tabs_in_doc_comments = "allow"
module_name_repetitions = "allow"

[lints.rustdoc]
missing_crate_level_docs = "warn"
