[package]
name = "pinger-cli"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
colored = "3.0.0"
base64 = "0.22.1"
derive_more = { version = "2.0.1", default-features = false, features = [
	"display",
] }
futures-util = "0.3.31"
pinger = { version = "*", path = "../lib" }
rustls = { version = "0.23.31", default-features = false, features = [
	"ring",
	"log",
	"logging",
	"std",
	"tls12",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
	"rustls-tls-native-roots",
] }
inquire = "0.7.5"

[lints]
rust.unsafe_code = "forbid"
clippy.pedantic = { level = "warn", priority = -1 }
clippy.cargo = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }
rust.missing_docs = "warn"
rustdoc.missing_crate_level_docs = "warn"
clippy.multiple_crate_versions = "allow"
clippy.tabs_in_doc_comments = "allow"
clippy.module_name_repetitions = "allow"
