[package]
name = "pinger-cli"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
colored = "3.0.0"
base64 = "0.22.1"
derive_more = { version = "2.0.1", default-features = false, features = [
	"display",
] }
futures-util = "0.3.31"
pinger = { version = "*", path = "../lib" }
rustls = { version = "0.23.33", default-features = false, features = [
	"ring",
	"log",
	"logging",
	"std",
	"tls12",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = [
	"rustls-tls-native-roots",
] }
inquire = "0.9.1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
tabs_in_doc_comments = "allow"
module_name_repetitions = "allow"

[lints.rustdoc]
missing_crate_level_docs = "warn"
