[package]
name = "pinger"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "pinger"
crate-type = ["cdylib", "lib"]

[features]
std = []
java-ffi = ["std", "dep:jni"]

[dependencies]
base64 = { version = "0.22.1", default-features = false }
chacha20poly1305 = "0.10.1"
jni = { version = "0.21.1", optional = true }
serde = { version = "1.0.203", features = [
	"derive",
], default-features = false }
x25519-dalek = { version = "2.0.1", features = [
	"getrandom",
	"static_secrets",
] }
