[package]
name = "pinger"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[lib]
name = "pinger"
crate-type = ["cdylib", "lib"]

[features]
default = ["std"]
std = []
java-ffi = ["std", "dep:jni"]

[dependencies]
base64 = { version = "0.22.1", default-features = false }
chacha20poly1305 = "0.10.1"
jni = { version = "0.21.1", optional = true }
serde = { version = "1.0.219", features = [
	"derive",
], default-features = false }
x25519-dalek = { version = "2.0.1", features = [
	"getrandom",
	"static_secrets",
] }

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
clippy.cargo = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }
rust.unsafe_code = "deny"
rust.missing_docs = "warn"
rustdoc.missing_crate_level_docs = "warn"
clippy.multiple_crate_versions = "allow"
clippy.tabs_in_doc_comments = "allow"
clippy.module_name_repetitions = "allow"
